give the store name a little breathing room and then overflow ellipsis when it's crazy long, fixes #36

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -451,10 +451,15 @@ aside
       font-weight: 700
       left: 50%
       line-height: 48px
-      margin-left: -75px
+      margin-left: -40%
+      overflow: hidden
+      padding: 0 50px
       position: absolute
       text-align: center
-      width: 150px
+      text-overflow: ellipsis
+      white-space: nowrap
+      width: 80%
+
 
     .cart
       background: #{"{{ theme.link_color }}"}
